--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "qrcode-terminal": "^0.12.0",
     "request": "^2.88.2",
     "socket.io": "^4.5.1",
-    "whatsapp-web.js": "^1.21.0"
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus"
   }
 }
